# kma-avr-tracker

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  attiny-rpi-2way-com.c
avr-app/: attiny-rpi-2way-com.c  attiny-rpi-com.c
cmake/: avr-gcc-toolchain.cmake
uart-test/: uart-receiver-test.py  uart-request-test.py
